--- a/index.html
+++ b/index.html
@@ -2,59 +2,29 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>初めて作ったページ</title>
+    <title>２度目に作ったページ</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="https://kit.fontawesome.com/be53fe4956.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="header">
-    <div class="header-logo">UNA</div>
-      <ul class="header-list">
-        <li>ご挨拶</li>
-        <li>好きなもの</li>
-        <li>お問い合わせ</li>
-      </ul>
-    </div>
-    <div class="main">
-      <div class="copy-container">
-        <h1>Hello World<span>!</span></h1>
-        <h2>初めまして、プログラミング</h2>
-      </div>
-      <div class="contents">
-        <h3 class="section-title">好きなもの</h3>
-        <div class="item">
-          <img src="https://4.bp.blogspot.com/-t9_8363EHVU/WR62F7gUDDI/AAAAAAABEWM/glCi46wkQ4sOnlmOPwbdqR9J_9YaubdOgCLcB/s400/food_hitsumabushi_set.png" alt="ひつまぶし" width="25%" height="25%">
-          <p>ひつまぶし</p>
-        </div>
-        <div class="item">
-          <img src="https://4.bp.blogspot.com/-HZLpM-iRJuk/WGCfgE08tiI/AAAAAAABAo0/8GLO5cvIoWYVkev-TqeCiuWUjUO0GXsMACLcB/s400/nailist_nail_salon_woman.png"alt="ネイルサロン" width="25%" height="25%">
-          <p>ネイルサロン</p>
-        </div>
-        <div class="item">
-          <img src="https://2.bp.blogspot.com/-KF04XskjC_Q/Udy65CUCfII/AAAAAAAAWP0/b0-Pu5PmqqE/s400/ofuro_nyuyokuzai_woman.png"alt="お風呂" width="25%" height="25%">
-          <p>お風呂</p>
-          </div>
-        <div class="item">
-          <img src="https://1.bp.blogspot.com/-dOEa5Zn3SE0/VW6AlTTx2TI/AAAAAAAAt_I/LUnpSYT93AY/s400/yoga_sankaku.png"alt="ヨガ" width="25%" height="25%">
-          <p>ヨガ</div>
-      </div>
-      <div class="contact-form">
-        <h3 class="section-title">お問い合わせ</h3>
-        <p>メールアドレス</p>
-        <input>
-        <p>お問い合わせ内容 </p>
-        <textarea></textarea>
-        <p>一緒に頑張りましょう！</p>
-        <input class="contact-submit" type=submit value="送信">
-      </div>
-    </div>
+    <!-- ここにコードを書いていきましょう -->
+    <header>
 
-    <div class="footer">
-    <div class="footer-logo">UNA</div>
-      <ul class="footer-list">
-        <li>飼い犬の</li>
-        <li>名前は</li>
-        <li>太郎です</li>
-      </ul>
+    </header>
+    <div class="top-wrapper">
+      <div class="container">
+        <h1>Nothing is impossible!</h1>
+        <h1>The differnce between winnning and losing is most often not quitting.</h1>
+        <p>プログラミングをはじめて３日目に作ったページ。</p>
+        <p>このページを成長記録にしていこうと思います。</p>
+        <div class="btn-wrapper">
+          <a class="btn twitter" href="https://twitter.com/unaunaunanan">
+            <span class="fa fa-twitter"></span>Twitter</a>
+        </div>
+        </div>
     </div>
+    <div class="favorite-wrapper"></div>
+    <div class="message-wrapper"></div>
+    <footer></footer>
   </body>
 </html>
