--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <script src="https://kit.fontawesome.com/be53fe4956.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <!-- ここにコードを書いていきましょう -->
     <header>
-
+      <div class="container">
+        <div class="header-left">
+          <img class="logo" src="logo_small.png">
+        </div>
+        <div class="header-right">
+          <a class="right-twitter" href="https://twitter.com/unaunaunanan"><span class="fa fa-twitter"></span>Twitter</a>
+        </div>
+      </div>
     </header>
     <div class="top-wrapper">
       <div class="container">
@@ -23,8 +29,52 @@
         </div>
         </div>
     </div>
-    <div class="favorite-wrapper"></div>
-    <div class="message-wrapper"></div>
-    <footer></footer>
+    <div class="favorite-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>My favorites</h2>
+        </div>
+        <div class="favorites">
+          <div class="favorite">
+            <div class="favorite-icon">
+              <img src="095244.png">
+              <p>お風呂</p></div>
+            <p class="txt-contents">本を読みながら1時間くらい浸かっています</p>
+          </div>
+          <div class="favorite">
+            <div class="favorite-icon">
+              <img src="1429320.png">
+              <p>ひつまぶし</p></div>
+            <p class="txt-contents">あつた蓬莱軒のひつまぶしが大好きです</p>
+          </div>
+          <div class="favorite">
+            <div class="favorite-icon">
+              <img src="1471069.png">
+              <p>ヨガ</p></div>
+            <p class="txt-contents">プログラミングの合間にいつでもヨガできるように、ヨガウェアで過ごしています</p>
+          </div>
+          <div class="favorite">
+            <div class="favorite-icon">
+              <img src="1551276.png">
+              <p>ネイルサロン</p></div>
+            <p class="txt-contents">フレンチネイルやシェル埋め込みデザインが好きです</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="message-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>一緒に頑張りましょう！</h2>
+          <h3>応援メッセージやいいねをいただけると嬉しいです♪</h3>
+        </div>
+        <a href="https://twitter.com/unaunaunanan" class="btn message">応援してやるか</a>
+      </div>
+    </div>
+    <footer>
+      <div class="container">
+        <img src="logo_small_icon_only_inverted.png">
+        <p>Nothing is impossible.</p></div>
+    </footer>
   </body>
 </html>
