--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>２度目に作ったページ</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css">
     <script src="https://kit.fontawesome.com/be53fe4956.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -12,6 +14,7 @@
         <div class="header-left">
           <img class="logo" src="logo_small.png">
         </div>
+        <span class="fas fa-bars menu-icon"></span>
         <div class="header-right">
           <a class="right-twitter" href="https://twitter.com/unaunaunanan"><span class="fa fa-twitter"></span>Twitter</a>
         </div>
@@ -59,6 +62,7 @@
               <p>ネイルサロン</p></div>
             <p class="txt-contents">フレンチネイルやシェル埋め込みデザインが好きです</p>
           </div>
+          <div class="clear"></div>
         </div>
       </div>
     </div>
